# simple-rag-gemini-alloydb

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
database/: 20240707134130_create_news_table.sql  20240707174904_create_news_embedding_index.sql
notebooks/: get_nomic_embedding.py  insert_knowledge_base.ipynb
src/: main.py
src/modules/: context_repository.py  llm.py  word_embedder.py
